--- a/index.html
+++ b/index.html
@@ -481,11 +481,11 @@
                     </div>
                     <div class="faq-item">
                         <button class="faq-question">
-                            <h3>Is $WLFG an unlimited supply token?</h3>
+                            <h3>Is KYC required?</h3>
                             <span class="faq-toggle">+</span>
                         </button>
                         <div class="faq-answer">
-                            <p>No. $WLFG has a fixed total supply of 100 million tokens. It will never be increased, ensuring long-term scarcity.</p>
+                            <p>KYC is not mandatory for participating in the presale. However, certain future governance activities or airdrops may require verification to prevent abuse.</p>
                         </div>
                     </div>
                     <div class="faq-item">
