--- a/index.html
+++ b/index.html
@@ -480,20 +480,20 @@
                     </div>
                     <div class="faq-item">
                         <button class="faq-question">
-                            <h3>Are there any benefits to using Coinbase Commerce?</h3>
+                            <h3>Is KYC required?</h3>
                             <span class="faq-toggle">+</span>
                         </button>
                         <div class="faq-answer">
-                            <p>Yes! When you pay through Coinbase Commerce with any supported currency, you receive an additional +10% WLFG bonus. It's secure and convenient.</p>
+                            <p>KYC is not mandatory for participating in the presale. However, certain future governance activities or airdrops may require verification to prevent abuse.</p>
                         </div>
                     </div>
                     <div class="faq-item">
                         <button class="faq-question">
-                            <h3>How do I use Coinbase Commerce to participate?</h3>
+                            <h3>Will I receive referral rewards if my invitee uses a different token to join the presale?</h3>
                             <span class="faq-toggle">+</span>
                         </button>
                         <div class="faq-answer">
-                            <p>Go to the presale section of the official website, choose Coinbase Commerce, generate a payment link, and complete your transaction. Your bonus will be credited automatically.</p>
+                            <p>Yes. Regardless of whether your invitee uses ETH, USDC, USDT, or USD1, as long as they successfully join the presale, both of you will receive 2,500 $WLFG tokens.</p>
                         </div>
                     </div>
                     <div class="faq-item">
