--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <section id="presale" class="presale">
             <div class="container">
-                <h2>WLFG Official Token Sale</h2>
+                <h2>WLFG Official PreSale & Airdrop</h2>
                 <div class="presale-content">
                     <div class="presale-info">
                         <h3>Join the Financial Revolution</h3>
@@ -139,7 +139,7 @@
                         <h4>🎁 Invite Rewards</h4>
                         <p>Invite friends and earn rewards together!</p>
                         <p>For each successful referral, both you and your friend will receive 2,500 <span class="highlight-gold">WLFG</span> tokens.</p>
-                        <p><strong class="highlight-dark-gold">You and your invitee will only receive the 2,500 WLFG reward if they join the presale. Rewards will be airdropped after the presale concludes.</strong></p>
+                        <p><strong class="highlight-dark-gold">The airdrop window may close at any time — supply is limited and will end once the cap is reached.</strong></p>
                     </div>
                     
                     <div class="referral-actions">
