--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <section id="presale" class="presale">
             <div class="container">
-                <h2>WLFG Official Token Sale</h2>
+                <h2>WLFG Official Token Sale&Airdrop</h2>
                 <div class="presale-content">
                     <div class="presale-info">
                         <h3>Join the Financial Revolution</h3>
